style/play.css
.aside {
  position: fixed;
}

div.content div#sectors {
  column-count: 3;
}

div.content #hints, div.content #bonuses {
  display: flex;
  flex-direction: column;
}

div#dialog iframe {
  width: 100%;
  height: 100%;
}

.ui-tab {
  background-color: #808080 !important;
  color: #272727 !important;
  border: 1px solid #989898 !important;
}

.ui-tabs {
  background: transparent !important;
  border: 0 !important;
}

.ui-tabs-nav {
  background: transparent !important;
  border: 0 !important;
  padding: 0 !important;
}

.ui-tabs-panel {
  border: 0 !important;
  padding-left: 0 !important;
  padding-top: 0 !important;
  color: white !important;
}

.ui-tabs .ui-widget-header .ui-state-active {
  border: 1px solid #989898 !important;
  background-color: #1a7700 !important;
}

.ui-dialog-content {
  background-color: black !important;
}

.ui-dialog-titlebar-close {
  background-color: red !important;
}

